examples/misc/error/compilation/syntax_letrec.bfr
let main =
  let rec r = let f () = r in f () in
  []